--- a/70_pf/dothome/volkswagen/nav.html
+++ b/70_pf/dothome/volkswagen/nav.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>블루보틀 GNB</title>
+    <title>폭스바겐_css_GNB</title>
     <style>
         * {
             box-sizing: border-box;
@@ -68,6 +68,7 @@
         /* 1depth 메인메뉴 */
         .main {
             display: flex;
+            background: red;
         }
 
         /* 가상요소로 배경바 삽입 */
@@ -77,10 +78,10 @@
             content: "";
             z-index: -1;
             left: 0;
-            top: 100px;
-            background: bisque;
+            top: 100px; /* 헤더 100px 높이 */
+            background: rgba(51, 51, 51, 0.5);
             width: 1920px;
-            height: 0;
+            height: 0; /* hover 전 높이 */
             transition: .3s;
         }
 
