--- a/70_pf/mysite3/index.html
+++ b/70_pf/mysite3/index.html
@@ -12,7 +12,9 @@
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="css/templatemo-style.css">
 	<link href='//fonts.googleapis.com/css?family=Raleway:400,300,600,700' rel='stylesheet' type='text/css'>
 	<!-- 
@@ -86,7 +88,7 @@ https://templatemo.com/tm-464-ultra-profile
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
-						<i class="fa fa-flash"></i>
+						<i class="fa fa-solid fa-paintbrush"></i>
 						<h3 class="text-uppercase tm-work-h3">graphic Design</h3>
 						<hr>
 						<p>Adobe Photoshop, illustrator, Procreate 등 그래픽 프로그램을 이용하여 작품을 기획하고 디자인합니다.</p>
@@ -94,7 +96,7 @@ https://templatemo.com/tm-464-ultra-profile
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
-						<i class="fa fa-dashboard"></i>
+						<i class="fa fa-solid fa-camera"></i>
 						<h3 class="text-uppercase tm-work-h3">Photograph</h3>
 						<hr>
 						<p>자연과 건물을 촬영하고 상세페이지 제작을 위해 제품의 특징을 효과적으로 표현한 사진을 촬영합니다.</p>
@@ -285,7 +287,7 @@ https://templatemo.com/tm-464-ultra-profile
 					<div class="media instagram">
 						<a href="https://www.instagram.com/d_greenwhiteblackcolor" target="_blank">
 							<div class="media-object pull-left">
-								<i class="fa fa-instagram"></i>
+								<i class="fa fa-brands fa-instagram"></i>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading tm-social-title">Follow me on</h4>
@@ -298,11 +300,11 @@ https://templatemo.com/tm-464-ultra-profile
 					<div class="media twitter">
 						<a href="http://gwbc.store" target="_blank">
 							<div class="media-object pull-left">
-								<i class="fa fa-twitter"></i>
+								<i class="fa fa-solid fa-house"></i>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading tm-social-title">see me on</h4>
-								<h3>hompage</h3>
+								<h3>my homepage</h3>
 							</div>
 						</a>
 					</div>
@@ -311,7 +313,7 @@ https://templatemo.com/tm-464-ultra-profile
 					<div class="media pinterest">
 						<a href="https://kr.pinterest.com/ddors2/" target="_blank">
 							<div class="media-object pull-left">
-								<i class="fa fa-pinterest"></i>
+								<i class="fa fa-brands fa-pinterest"></i>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading tm-social-title">Pin me on</h4>
@@ -353,8 +355,8 @@ https://templatemo.com/tm-464-ultra-profile
 				</div>
 				<div class="col-md-1 col-sm-1"></div>
 				<div class="col-md-12 col-sm-12">
-					<p>Copyright &copy; 2018 Ultra Profile
-						. design: <a rel="nofollow noopener" href="https://templatemo.com">template mo</a></p>
+					<p>Copyright &copy; 2025 KHK. design: <a rel="nofollow noopener"
+							href="https://templatemo.com">template mo</a></p>
 				</div>
 			</div>
 		</div>
